# nigerian-datasets-be

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cleanup-branches.yml  cleanup-preview.yml  deploy.yml  lint-and-test.yml  preview.yml
backend/: settings.py  urls.py
core/: admin.py  apps.py  config.py  exceptions.py  extensions.py  urls.py  utils.py  views.py
datasets/: admin.py  models.py  moderator_admin.py  serializers.py  urls.py  utils.py  views.py
datasets/migrations/: 0001_initial.py  0002_alter_dataset_changelog_alter_dataset_metadata_and_more.py  0002_datasetversion_version_number_and_more.py  0003_alter_dataset_approved_by.py  0003_datasetfile_dataset.py  0004_datasetfile_upload_url.py  0005_alter_dataset_description_alter_dataset_license_and_more.py
datasets/templates/: download_file_email.html
docs/: CONTRIBUTING.md  SECURITY.md
trends/: admin.py  analyzers.py  apps.py  constants.py  model_cache.py  models.py  serializers.py  tests.py  urls.py  views.py
trends/management/commands/: create_dummy_searches.py  test_trending.py
trends/migrations/: 0001_initial.py  0002_searchquery_embedding.py
users/: admin.py  auth.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_display_name.py
users/templates/: welcome_email.html
